bug tag invisible ok

--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,19 @@
 body {
-    max-width: 100vw;
-    font-family: 'DM Sans', sans-serif;
-    margin: 0;
-    padding-top: 42px;
-    padding-left: 100px;
-    padding-right: 100px;
-  }
-  
-  /* --- Header --- */
-  header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
+  max-width: 100vw;
+  font-family: 'DM Sans', sans-serif;
+  margin: 0;
+  padding-top: 42px;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+/* --- Header --- */
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
   .divLogoTitle {
     display: flex;
     flex-direction: column;
@@ -36,6 +36,19 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
+  }
+  
+  /* color */
+  .colorIngredient {
+    background-color: #3282f7;
+  }
+    
+  .colorAppareil {
+    background-color: #68d9a4;
+  }
+    
+  .colorUstensile {
+    background-color: #ed6454;
   }
   
   /* --- Search --- */
@@ -73,7 +86,6 @@ body {
   }
   
   .elementTri {
-    background-color: #3282f7;
     color: white;
     padding: 23px;
     font-size: 18px;
@@ -85,19 +97,12 @@ body {
     position: relative;
   }
   
-  .elementTri2 {
-    background-color: #68d9a4;
-  }
-  
-  .elementTri3 {
-    background-color: #ed6454;
-  }
-  
   .elementTri__flex {
     display: flex;
     align-items: center;
     position: relative;
   }
+
   /* --- inputTri --- */
   .elementTri__input {
     border: none;
@@ -105,13 +110,13 @@ body {
     background-color: transparent;
     box-shadow: none;
     outline: none;
-    color: white;
   }
   
   .elementTri__input::placeholder {
     color: white;
   }
   
+  /* --- inputArrow --- */
   .elementTri__arrow {
     background: url(../assets/icons/arrowBottom.svg) center center / 100% 100%;
     width: 16px;
@@ -123,6 +128,7 @@ body {
     transform: rotate(180deg);
   }
   
+  /* --- inputDropdown --- */
   .elementTri__dropdown1 {
     position: absolute;
     background-color: #3282f7;
@@ -134,6 +140,7 @@ body {
     border-bottom-right-radius: 5px;
     display: none;
   }
+
   .elementTri__dropdown2 {
     position: absolute;
     background-color: #68d9a4;
@@ -162,41 +169,38 @@ body {
     display: block;
   }
   
+  /* --- élément de la Dropdown --- */
   .input__list {
     text-transform: capitalize;
   }
   
   .input__list li {
     cursor: pointer;
-      margin-top: 5px;
-      margin-bottom: 5px;
-      padding: 5px;
-      padding-left: 23px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+    padding-left: 23px;
   }
   
   .input__list li:hover {
       background-color: rgba(255,255,255, 0.1);
+    }
+    
+  /* --- allTag --- */
+  .allTag{
+    display: flex;
   }
-  
-  /* --- elementIngrédient/Appareils/Ustensils --- */
-  .elementIngrédient {
+  /* --- tag Ingrédient/Appareils/Ustensils --- */
+  .tag {
     color: white;
     padding: 10px;
     padding-left: 20px;
     font-size: 14px;
     border-radius: 5px;
-    z-index: 2;
+    z-index: 1;
     left: 80px;
     margin-right: 20px;
     margin-bottom: 15px;
-  }
-  
-  .elementIngrédient2 {
-    background-color: #68d9a4;
-  }
-  
-  .elementIngrédient3 {
-    background-color: #ed6454;
   }
   
   .elementIngrédient__flex {
@@ -241,7 +245,7 @@ body {
     padding: 20px;
     height: 180px;
   }
-  /**/
+  
   .cText__header {
     display: flex;
     justify-content: space-between;
@@ -277,7 +281,7 @@ body {
   }
   
   /*.cMain__ingredients{
-  
+    
   }*/
   
   .cMain__description {
@@ -291,10 +295,12 @@ body {
     white-space: normal;
     overflow: auto;
   }
-            
+  
   .gras {
     font-weight: bold;
   }
+
+  /* --- message d'erreur --- */
   
   #messError{
     display: none;
@@ -302,3 +308,4 @@ body {
     margin-bottom: 15px;
     font-size: 20px;
   }
+  
